--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@ body > .wrapper {
 NAVIGATION
 --------------------------------------*/
 header {
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
     height: 100px;
@@ -25,7 +25,9 @@ header {
     justify-content: center;
 }
 
-header .wrapper {
+header .wrapper,
+footer,
+#content {
     padding: 0 1em;
 }
 
@@ -58,7 +60,6 @@ header .wrapper ul {
 }
 
 footer {
-    padding: 1em 0;
     background-color: #f1f1f1;
     color: #333333;
     font-size: 0.75em;
@@ -89,10 +90,29 @@ FEATURE
     height: 300px;
     display: -webkit-flex;
     display: flex;
-    -webkit-flex-direction: row /* works with row or column */
+    -webkit-flex-direction: row;
     flex-direction: row;
     -webkit-align-items: center;
     align-items: center;
     -webkit-justify-content: center;
     justify-content: center;
+    font-size: 40px;
+}
+
+#box-container {
+    display: -webkit-flex;
+    display: flex;
+    align-items: flex-start;
+    -webkit-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-justify-content: center;
+    justify-content: center;
+}
+
+.content-box {
+    height: 250px;
+    min-width: 300px;
+    float: left;
+    margin: .5em
+    
 }
