--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,8 @@ footer {
     background-color: #f1f1f1;
     color: #333333;
     font-size: 0.75em;
+    padding: 1em;
+    margin-top: 60px;
 }
 
 header ul * {
@@ -128,7 +130,7 @@ header ul a:hover {
     height: 250px;
     width: 300px;
     z-index: 5;
-    opacity: 0;
+    opacity: .7;
     background-color: lightgreen;
     color: black;
     text-decoration: none;
@@ -144,5 +146,5 @@ header ul a:hover {
 }
 
 .content-box a:hover {
-    opacity: 0.9;
+    opacity: 0;
 }
